# treecore

./: CMakeLists.txt  FindTREEJUCE.cmake  NomoRemake.py  README.md  premake5.lua  uncrustify.cfg  walk.py
cmake/: FindTreeCore.cmake  TreeCoreConfig.cmake  TreeCoreInternalConfig.cmake
old/cmake/: TreeCoreConfig.cmake
old/src/: CMakeLists.txt
src/: CMakeLists.txt  TreecoreTestFramework.cpp  treecore_bin_builder.cpp  treejuce_bin_builder.cpp
src/App/: EnterPoint.h
src/Atomic/: Atomic.h
src/Containers/: DList.h  HashMap.h  PropertySet.h  StaticArray.h
src/Containers/Details/: ArrayAllocationBase.h
src/Files/: FileInputSource.cpp  FileInputSource.h  FileInputStream.h
src/Headers/: Header.cpp  Header.h
src/Headers/Unils/: Architectures.h  Asserts.h  Complier.h  CustomCompilerMessages.h  DebugFlags.h  DepercatedFlags.h  Inline.h  Instructions.h  OS.h  StdIncludes.h  StrongTypedef.h  TargetAndCPU.h  Throw.h
src/Headers/WindowsHeaders/: ScopedWin32Handle.cpp  ScopedWin32Handle.h  ThrowLastError.cpp  ThrowLastError.h  minimal_windows_header.h
src/Headers/old/: Header.cpp  Header.h  old.h
src/JSON/: JSON.h
src/MPL/: BestParam.h  TypeIf.h  ValueIf.h  ValueType.h  end_mpl_function.h  static_for.h
src/MiniWheel/: Atomic.h  DeleteAfterMain.h
src/Pointers/: 读我.txt
src/Texts/: Identifier.cpp  Identifier.h  LocalisedStrings.h  String.h  StringArray.h
src/Threads/: CriticalSection_posix.cpp  ThreadLocalValue.h  ThreadPool.cpp  WaitForAllThreads.h
src/Xml/: XmlDocument.cpp  XmlElement.cpp  XmlElement.h
src/treecore/: AbstractFifo.cpp  AbstractFifo.h  Align.h  AlignedMalloc.cpp  AlignedMalloc.h  Array.h  ArrayAllocationBase.h  ArrayRef.h  AssumeAligned.h  Atomic.h  AtomicFunc.h  AtomicObject.h  BasicNativeHeaders.h  BigInteger.cpp  BigInteger.h  BufferedInputStream.cpp  BufferedInputStream.h  ByteOrder.h  CharPointer_ASCII.h  CharPointer_UTF16.h  CharPointer_UTF32.h  CharPointer_UTF8.cpp  CharPointer_UTF8.h  CharacterFunctions.cpp  CharacterFunctions.h  CheckedMalloc.cpp  CheckedMalloc.h  ChildProcess.cpp  ChildProcess.h  ClassUtil.h  ClassUtils.h  CmdParser.cpp  CmdParser.h  Common.h  Config.h.in  ContainerDeletePolicy.h  CriticalSection.h  DList.h  DebugUtils.cpp  DebugUtils.h  (+170 more)
src/treecore/Atomic/: gcc.h  msvc.h  template.h
src/treecore/MPL/: TypeArray.h  TypeSelect.h  ValueType.h  static_for.h
src/treecore/MiniWheel/: Dlist.h  Interlocked.h
src/treecore/SIMD/: neon.h  sse2.h  template.h
src/treecore/impl/: HashImpl.h
src/treecore/internal/: String_private.h  SystemStats_private.h
src/treecore/native/: android_Files.cpp  android_JNIHelpers.h  android_Misc.cpp  android_Network.cpp  android_SystemStats.cpp  android_Threads.cpp  juce_mac_Files.mm  juce_mac_Network.mm  juce_mac_Strings.mm  juce_mac_SystemStats.mm  juce_mac_Threads.mm  linux_CommonFile.cpp  linux_Files.cpp  linux_Network.cpp  linux_SystemStats.cpp  linux_Threads.cpp  linux_WebInputStream.cpp  linux_private.h  mac_Files.mm  mac_Network.mm  mac_Strings.mm  mac_SystemStats.mm  mac_Threads.mm  osx_ObjCHelpers.h  posix_ChildProcess.h  posix_Files.cpp  posix_HighResolutionTimer.h  posix_InterProcessLock.h  posix_NamedPipe.cpp  posix_NamedPipe.h  posix_Process.cpp  posix_SharedCode.cpp  posix_Thread.cpp  posix_private.h  win32_ChildProcess.cpp  win32_ChildProcess.h  win32_ComSmartPtr.h  win32_Files.cpp  win32_HighResolutionTimer.h  win32_InterProcessLock.h  (+5 more)
src/treecore/simd/: sse2.h  template.h
src/treejuce/: AlignedMalloc.cpp  AlignedMalloc.h  Array.h  ArrayAllocationBase.h  ArrayRef.h  BasicNativeHeaders.h  BigInteger.cpp  BigInteger.h  BufferedInputStream.cpp  BufferedInputStream.h  ByteOrder.h  CharPointer_ASCII.h  CharPointer_UTF16.h  CharPointer_UTF32.h  CharPointer_UTF8.h  CharacterFunctions.cpp  CharacterFunctions.h  CheckedMalloc.cpp  CheckedMalloc.h  ChildProcess.cpp  ChildProcess.h  Common.h  Config.h.in  ContainerDeletePolicy.h  CriticalSection.h  DirectoryIterator.cpp  DirectoryIterator.h  DynamicLibrary.h  DynamicObject.cpp  DynamicObject.h  ElementComparator.h  Expression.cpp  Expression.h  File.cpp  File.h  FileFilter.cpp  FileFilter.h  FileInputSource.cpp  FileInputSource.h  FileInputStream.cpp  (+123 more)
src/treejuce/Atomic/: gcc.h  template.h
src/treejuce/SIMD/: sse2.h  template.h
src/treejuce/internal/: String_private.h  SystemStats_private.h
src/treejuce/native/: android_SystemStats.cpp  juce_mac_Files.mm  juce_mac_Strings.mm  juce_mac_SystemStats.mm  juce_mac_Threads.mm  linux_CommonFile.cpp  linux_Files.cpp  linux_SystemStats.cpp  linux_Threads.cpp  linux_private.h  osx_ObjCHelpers.h  posix_ChildProcess.h  posix_HighResolutionTimer.h  posix_InterProcessLock.h  posix_NamedPipe.cpp  posix_SharedCode.cpp  posix_private.h  win32_SharedCode.cpp  win32_SystemStats.cpp
t/: CMakeLists.txt  TestConfig.h.in  TestFramework.h  t_abstract_fifo.cpp  t_aligned_array.cpp  t_aligned_malloc.cpp  t_array_elem_move.cpp  t_array_ref.cpp  t_atomic_func_st.cpp  t_atomic_obj_st.cpp  t_binary_builder.cpp  t_build_time_resource_wrap.cpp  t_child_process.cpp  t_cmd_parser.cpp  t_dlist.cpp  t_file.cpp  t_float_utils.cpp  t_fxsave.cpp  t_gzip_compressor_output_stream.cpp  t_hash_map.cpp  t_hash_map_value_move.cpp  t_hash_multi_map.cpp  t_hash_multi_map_move.cpp  t_hash_set.cpp  t_hash_set_string.cpp  t_identifier.cpp  t_int_type.cpp  t_int_utils.cpp  t_json.cpp  t_lf_queue_st.cpp  t_memory_input_output_stream.cpp  t_mpl.cpp  t_obj_pool.cpp  t_opt_scope_ptr.cpp  t_option_parser.cpp  t_queue.cpp  t_ref_count_holder_st.cpp  t_ref_count_singleton_mt.cpp  t_ref_count_singleton_st.cpp  t_scoped_denormal_flag.cpp  (+16 more)
t/build_time_resource_wrap_input/: baz
test/: CMakeLists.txt  mt19937_float_distribute.cpp
tests/: CMakeLists.txt  TestFramework.h  t_aligned_malloc.cpp  t_dlist.cpp  t_hash_map.cpp  t_hash_map_value_move.cpp  t_hash_multi_map_move.cpp  t_hash_set.cpp  t_identifier.cpp  t_lf_queue_st.cpp  t_obj_pool.cpp  t_scoped_denormal_flag.cpp  t_simd_128.cpp  t_simd_64.cpp  t_sorted_set.cpp  t_sparse_set.cpp  t_static_array.cpp  t_thread.cpp  t_var.cpp
都在这/Atomic/: Interlocked_GCC.h  (+1 more)
(+112 files in other folders)
